# bousse

./: Cargo.toml  README.md
src/: app.rs  controller.rs  cover_img.rs  file_navigator.rs  gpu.rs  gui.rs  main.rs  midi_controller.rs  mixer.rs  processable.rs  turntable.rs  utils.rs
